# wishpot

./: README.md  db.sqlite3  manage.py  pyproject.toml
pots/: apps.py  models.py  urls.py  views.py
pots/static/pots/: dashboard.css  lists.css  main.css  new_list.css  signup.css  spends.css
pots/templates/: base.html  base_authenticated.html  base_logged_in.html  base_logged_out.html
pots/templates/pots/: dashboard.html  lists.html  new_list.html  profile.html  signup.html  spends.html
pots/templates/registration/: login.html
wishpot/: asgi.py  settings.py  urls.py  wsgi.py
wishpot/frontend/: jest-preset.js  package-lock.json  package.json
wishpot/frontend/coverage/: clover.xml  coverage-final.json  lcov.info
wishpot/frontend/coverage/lcov-report/: index.html
wishpot/frontend/coverage/lcov-report/components/: UserSignup.vue.html  index.html
wishpot/frontend/coverage/lcov-report/frontend/: .eslintrc.js.html  .postcssrc.js.html  index.html  jest-preset.js.html
wishpot/frontend/coverage/lcov-report/frontend/config/: dev.env.js.html  index.html  index.js.html  prod.env.js.html
wishpot/frontend/coverage/lcov-report/src/: App.vue.html  index.html
wishpot/frontend/coverage/lcov-report/views/: SignupPage.vue.html  index.html
wishpot/frontend/src/: App.vue
wishpot/frontend/src/__tests__/: SignupPage.test.js  app.test.js
wishpot/frontend/src/auth/: AuthService.js
wishpot/frontend/src/components/: UserLogin.vue  UserSignup.vue
wishpot/frontend/src/router/: index.js
wishpot/frontend/src/views/: SignupPage.vue
(+13 files in other folders)
